<resources>
    <string name="app_name">Places Wishlist</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_button">Add</string>
    <string name="add_a_place">Add a place</string>
    <string name="share">Share</string>
    <string name="choose_dialog">Which one you want to choose</string>
    <string name="visited">Visited place</string>
    <string name="err_message"> Something went wrong. Please retry later</string>
    <string name="done_button">Done</string>
    <string name="bluetooth_Button">Receive from bluetooth</string>
    <string name="bluetooth_enable_fail">You need to enable bluetooth to continue</string>
    <string name="bluetooth_request_denied">You need to grant permissions to use this feature</string>
    <string name="order_by">Order By…</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="group_by">Group By…</string>
    <string name="gBcountry">country</string>
    <string name="delete">Delete</string>
    <string name="send_via_bluetooth">Send via Bluetooth</string>
    <string name="connection_estrablished">Connection established</string>
    <string name="receiving">Receiving list…</string>
    <string name="completed_bt">Completed!</string>
    <string name="waiting_for_connection">Waiting for connection</string>
    <string name="connecting">Connecting…</string>
    <string name="title_send_wait">Connected… Preparing list to send</string>
    <string name="sending_list">Connected.. Sending list</string>
    <string name="close">Close</string>
    <string name="tv_username">Who sent you the list?</string>
</resources>